# sles-terraform

./: .gitignore  Cargo.toml  GNUmakefile  build.rs  cloud-config.template  dlshasum.sh  globals.tf  image.sh  images.tf  k8s.sh  k8s.tf  libvirt.tf  providers.tf  purge.sh  readme.md  rke-cluster.template  rke2-config-yaml.template  rke2.tf  shell.nix  zypper.tf
bento/packer_templates/sles/: sles-15-sp2.json
kiwi/: .gitignore  GNUmakefile  cloud-config.template  config.sh  config.xml  known-hosts.template  libvirt.tf  qcow.sh  readme.md  srv-kiwi.automount  srv-kiwi.mount  ssh-config.template
src/: lib.rs  stc.rs
